Modern IDB: In the VersionChangeEvent for delete database calls, oldVersion should be null instead of 0. https://bugs.webkit.org/show_bug.cgi?id=151481

Reviewed by Sam Weinig.

Source/WebCore:

No new tests, covered by changes to:
    storage/indexeddb/modern/deletedatabase-1.html
    storage/indexeddb/modern/deletedatabase-2.html

* Modules/indexeddb/IDBVersionChangeEvent.h:
* Modules/indexeddb/IDBVersionChangeEvent.idl:

* Modules/indexeddb/client/IDBVersionChangeEventImpl.cpp:
(WebCore::IDBClient::IDBVersionChangeEvent::newVersion):
* Modules/indexeddb/client/IDBVersionChangeEventImpl.h:

* Modules/indexeddb/legacy/LegacyVersionChangeEvent.cpp:
(WebCore::LegacyVersionChangeEvent::newVersion):
* Modules/indexeddb/legacy/LegacyVersionChangeEvent.h:

LayoutTests:

* storage/indexeddb/modern/deletedatabase-1-expected.txt:
* storage/indexeddb/modern/deletedatabase-2-expected.txt:

Canonical link: https://commits.webkit.org/169660@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192698 268f45cc-cd09-0410-ab3c-d52691b4dbfc